THE HOMEPAGE IS DONE.... (except for small bug on mobile)

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -23,7 +23,7 @@
 }
 
 .filler-section {
-  height: 93vh;
+  height: 56vh;
   background-color: #000000;
 }
 
